--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-intersection-observer": "^8.26.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-transition": "^2.0.0",
     "react-scripts": "3.4.1",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
